--- a/ppius/package.xml
+++ b/ppius/package.xml
@@ -43,13 +43,13 @@
   <buildtool_depend>catkin</buildtool_depend>
   <build_depend>roscpp</build_depend>
   <build_depend>std_msgs</build_depend>
-
+<build_depend>rospy</build_depend>
 
      <build_depend>ppius_msg</build_depend>
    <run_depend>message_runtime</run_depend> 
   <run_depend>roscpp</run_depend>
   <run_depend>std_msgs</run_depend>
-
+<run_depend>rospy</run_depend>
 
     <run_depend>ppius_msg</run_depend> 
 
